Sat Apr 23 18:40:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Exception.cpp:
          Put the specializations in the TAO namespace to fix compile
          problems with AIX

Sat Apr 23 13:03:14 2005  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

	* tao/PICurrent.cpp: 
  	* tao/PICurrent.h: 
	* tao/PICurrent.inl: Changed all uses of "id" to something else to
	  avoid conflicts with Mac OS X, where "id" is a keyword.  Thanks
 	  to Ron Wilson <ronwilson@mac.com> for reporting this problem.

	* orbsvcs/tests/FT_App/StubBatchConsumer.h: Added the
	  ACE_THROW_SPEC to the offer_change() method.  Thanks to Ron
 	  Wilson <ronwilson@mac.com> for reporting this problem.

Sat Apr 23 18:06:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/default_resource.cpp:
          Added include of ace/Reactor.h to get ACE_Reactor

Sat Apr 23 17:59:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/CORBALOC_Parser.cpp:
          Added include of ace/OS_NS_string.h to get ACE_OS::strncmp

Sat Apr 23 17:57:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/Connector_Registry.cpp:
          Added include of ace/Auto_Ptr.h to get auto_ptr.

        * tao/Connection_Handler.cpp:
          Added include of ace/os_include/sys/os_socket.h to get the bufsize
          defines. Fixes compile problems with AIX.

Sat Apr 23 15:50:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tao/NVList.cpp:
          Include ace/Log_Msg.h to get ACE_DEBUG

        * tao/ClientRequestInfoA.cpp:
          Regenerated

Fri Apr 22 23:08:32 2005  Ossama Othman  <ossama@dre.vanderbilt.edu>

	* orbsvcs/orbsvcs/IFRService/Container_i.cpp:

	  Fixed "variable may be used uninitialized" g++ 4.0 warnings.

	* orbsvcs/orbsvcs/Scheduler_Factory.cpp (log_scheduling_tuples):

	  Made format string variable into a string literal.  Allows g++
	  format specifier argument checking to work, and addresses a
	  related g++ 4.0 warning.
